# xy_request_handler_web

./: MANIFEST.in  README.md  pyproject.toml  setup.py
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
samples/xy_web_server_demo/: requirements.txt
samples/xy_web_server_demo/source/Runner/: Runner.py
samples/xy_web_server_demo/source/Runner/RequestHandlerDemo/: Demoes.py
xy_request_handler_web/: Web.py  __init__.py
